--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,6 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<manifest xmlns:android="http://schemas.android.com/apk/res/android"
-          package="com.example.xiaomimusicmodule">
+<manifest xmlns:android="http://schemas.android.com/apk/res/android">
     <application
             android:label="Xiaomi Music Module"
             android:icon="@android:drawable/sym_def_app_icon">
