--- a/app/build.gradle
+++ b/app/build.gradle
@@ -5,6 +5,7 @@ plugins {
 }
 
 android {
+    namespace = "com.xiaomi.music"
     compileSdk 34
 
     defaultConfig {
@@ -35,4 +36,8 @@ android {
 
 dependencies {
     compileOnly 'de.robv.android.xposed:api:82'
+    implementation 'com.highcapable.yukihookapi:api:1.1.11'
+    ksp 'com.highcapable.yukihookapi:ksp-xposed:1.1.11'
+    implementation 'com.android.support:support-annotations:28.0.0'
+    implementation 'org.jetbrains.kotlinx:kotlinx-coroutines-android:1.7.3'
 }
