--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,19 +1,27 @@
 <?xml version="1.0" encoding="utf-8"?>
-<manifest xmlns:android="http://schemas.android.com/apk/res/android">
+<manifest xmlns:android="http://schemas.android.com/apk/res/android"
+          xmlns:tools="http://schemas.android.com/tools"
+>
+
     <application
-            android:label="Xiaomi Music Module"
-            android:icon="@android:drawable/sym_def_app_icon">
+            android:label="Xiaomusic Free"
+            tools:ignore="MissingApplicationIcon">
+
         <meta-data
                 android:name="xposedmodule"
                 android:value="true" />
+
         <meta-data
                 android:name="xposeddescription"
-                android:value="Xiaomi Music free listening and ad removal module" />
+                android:value="小米听歌" />
+
         <meta-data
                 android:name="xposedminversion"
                 android:value="53" />
+
         <meta-data
                 android:name="xposedscope"
-                android:resource="@array/xposed_scope" />
+                android:value="@array/xposed_scope"/>
     </application>
+
 </manifest>
