--- a/app/build.gradle
+++ b/app/build.gradle
@@ -6,12 +6,12 @@ plugins {
 
 android {
     namespace = "com.xiaomi.music"
-    compileSdk 34
+    compileSdk 33
 
     defaultConfig {
         applicationId "com.xiaomi.music"
         minSdk 26
-        targetSdk 34
+        targetSdk 33
         versionCode 20
         versionName '2.0'
 
@@ -35,9 +35,8 @@ android {
 }
 
 dependencies {
-    compileOnly 'de.robv.android.xposed:api:82'
-    implementation 'com.highcapable.yukihookapi:api:1.1.11'
-    ksp 'com.highcapable.yukihookapi:ksp-xposed:1.1.11'
-    implementation 'com.android.support:support-annotations:28.0.0'
-    implementation 'org.jetbrains.kotlinx:kotlinx-coroutines-android:1.7.3'
+    compileOnly("de.robv.android.xposed:api:82")
+    implementation("androidx.core:core-ktx:1.9.0")
+    implementation("androidx.appcompat:appcompat:1.6.1")
+    implementation("com.google.android.material:material:1.8.0")
 }
